plugins {
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id 'jacoco'
}

group = 'org.pk.collector'
version = '1.0.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

dependencies {
    implementation platform('org.testcontainers:testcontainers-bom:1.19.8')
    
    // Spring Boot Core, Data JPA, JDBC, Validation, JSON, Actuator
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-core'

    // Logging: Log4j2
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    annotationProcessor 'org.apache.logging.log4j:log4j-core'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // JobRunr
    implementation 'org.jobrunr:jobrunr-spring-boot-4-starter:8.5.2'

    // Database and Liquibase
    implementation 'org.springframework.boot:spring-boot-starter-liquibase'
    runtimeOnly 'org.yaml:snakeyaml'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    // SFTP Client: SSHJ
    implementation 'com.hierynomus:sshj:0.38.0'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    ignoreFailures = true
    finalizedBy jacocoTestReport // Generate report after tests run
}

jacoco {
    toolVersion = "0.8.14"
}

def jacocoExcludes = [
    'org/pk/collector/core/repository/**',
    'org/pk/collector/Application.class'
]

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.required = true
    }
    classDirectories.setFrom(files(sourceSets.main.output.classesDirs.collect {
        fileTree(dir: it, exclude: jacocoExcludes)
    }))
}

jacocoTestCoverageVerification {
    dependsOn test
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
    classDirectories.setFrom(files(sourceSets.main.output.classesDirs.collect {
        fileTree(dir: it, exclude: jacocoExcludes)
    }))
}

check.dependsOn jacocoTestCoverageVerification
